--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,5 +9,16 @@
     <string name="urlHint">www.samplesite.com/datafile.txt</string>
     <string name="viewFileLabel">View File</string>
     <string name="accelVisualLabel">View Acceleration Data</string>
-
+	<string-array name="urlEntries">
+	    <item>None</item>
+	    <item>Sample Data 1</item>
+	    <item>Sample Data 2</item>
+	    <item>Sample Data 3</item>
+	</string-array>
+	<string-array 
+	    name="sampleUrls">
+	    <item>http://www2.engr.arizona.edu/~sprinkjm/work/ece473-573/sampleData01-hw02.txt</item>
+	    <item>http://www2.engr.arizona.edu/~sprinkjm/work/ece473-573/sampleData02-hw02.txt</item>
+	    <item>http://www2.engr.arizona.edu/~sprinkjm/work/ece473-573/sampleData03-hw02.txt</item>
+	</string-array>
 </resources>
