Modified interface to support test files

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,6 @@
 <resources>
 
     <string name="app_name">AccelDisplay</string>
-    <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="name">Eric Cascketta</string>
     <string name="assign">ECE 473 Homework 2</string>
@@ -16,6 +15,7 @@
 	    <item>Sample Data 3</item>
 	</string-array>
 	<string-array name="originEntries">
+	    <item>Select Input</item>
 	    <item>Url</item>
 	    <item>Local File</item>
 	</string-array>
@@ -24,5 +24,9 @@
 	    <item>http://www2.engr.arizona.edu/~sprinkjm/work/ece473-573/sampleData01-hw02.txt</item>
 	    <item>http://www2.engr.arizona.edu/~sprinkjm/work/ece473-573/sampleData02-hw02.txt</item>
 	    <item>http://www2.engr.arizona.edu/~sprinkjm/work/ece473-573/sampleData03-hw02.txt</item>
+	</string-array>
+	<string-array name="localFileEntries">
+	    <item>File 1</item>
+	    <item>File 2</item>
 	</string-array>
 </resources>
